# modern_fm

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api_design/: index.html
benchmark_plan/: index.html
benchmarks/: README.md  bench_criteo_like.py  bench_cuda.py  bench_synthetic.py  bench_vs_baseline.py
compat_policy/: index.html
cuda_validation_runbook/: index.html
data_format/: index.html
docs/: api_design.md  benchmark_plan.md  compat_policy.md  cuda_validation_runbook.md  data_format.md  gpu_backend_plan.md  index.md  math_spec.md  math_spec_fwfm.md  optimization_spec.md  references.md  requirements.md  roadmap.md  test_plan.md
examples/: README.md  basic_usage.py  calibration.py  top_interactions.py
gpu_backend_plan/: index.html
math_spec/: index.html
math_spec_fwfm/: index.html
optimization_spec/: index.html
python/modern_fm/: __init__.py  _backend.py  _base.py  _early_stop.py  _inspect.py  _partial.py  _reference.py  _reference_train.py  _typing.py  ffm.py  fm.py  fwfm.py  libffm.py  losses.py  pooling.py  preprocessing.py
references/: index.html
requirements/: index.html
roadmap/: index.html
rust/: Cargo.toml
rust/src/: data.rs  ffm.rs  fm.rs  fwfm.rs  lib.rs  optimizer.rs
rust/src/cuda/: ffm.rs  ffm_train.rs  ffm_train_mc.rs  fm.rs  fm_train.rs  fm_train_mc.rs  fwfm.rs  fwfm_train.rs  mod.rs
scripts/: colab_gpu_test.sh  colab_remote_test.py
search/: search_index.json
test_plan/: index.html
tests/: conftest.py  test_api.py  test_backend_cuda.py  test_calibration.py  test_cuda_parity.py  test_dataframe_input.py  test_early_stopping.py  test_estimators.py  test_ffm_correctness.py  test_fm_correctness.py  test_fwfm.py  test_libffm.py  test_losses.py  test_multiclass.py  test_partial_fit.py  test_pooling.py  test_preprocessing.py  test_rust_parity.py  test_rust_train_parity.py  test_serialization.py  test_sklearn_compat.py  test_sparse_dense_equivalence.py  test_top_interactions.py  test_training_reference.py  test_validation.py  test_weights_smoothing.py
