[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "modern-fm"
version = "0.2.1"
description = "Fast, sklearn-compatible Factorization Machines and Field-aware Factorization Machines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Masaya Kawamata" }]
keywords = ["factorization-machines", "ffm", "ctr", "recommender", "tabular"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/Matapanino/modern_fm"
Repository = "https://github.com/Matapanino/modern_fm"
Issues = "https://github.com/Matapanino/modern_fm/issues"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "python"
module-name = "modern_fm._rust"
features = ["pyo3/extension-module"]
include = [{ path = "LICENSE", format = "sdist" }]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "NPY", "UP"]
