[package]
name = "modern-fm"
version = "0.4.0"
edition = "2021"
rust-version = "1.74"
description = "Rust backend for the modern_fm Python package"
license = "MIT"

[lib]
name = "_rust"
crate-type = ["cdylib", "rlib"]

[features]
# Optional CUDA backend (docs/gpu_backend_plan.md). cudarc's default
# `fallback-dynamic-loading` dlopens the driver at runtime, so this feature
# compiles WITHOUT a CUDA toolkit (verified by the ci.yml `cuda-check` job);
# it is a no-op on macOS (no CUDA support), where the dependency is skipped.
cuda-backend = ["dep:cudarc"]

[dependencies]
# extension-module is enabled by maturin (see pyproject [tool.maturin].features)
# so that `cargo test` can still link against libpython.
pyo3 = { version = "0.25", features = ["abi3-py310"] }
numpy = "0.25"
rayon = "1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
cudarc = { version = "0.19", optional = true }

[profile.release]
lto = true
codegen-units = 1
